--- a/style.css
+++ b/style.css
@@ -22,6 +22,42 @@
   transform-box: fill-box;
 }
 
+/* WiFi icon animation */
+.wifi path {
+  -webkit-animation: wifi-anim 1s linear infinite alternate;
+  animation: wifi-anim 1s linear infinite alternate;
+  transform-box: fill-box;
+  transform-origin: center center;
+}
+
+#left-figure.face.eye {
+  -webkit-animation: eye-blink-1 1s linear infinite alternate;
+  animation: eye-blink-1 1s linear infinite alternate;
+  transform-box: fill-box;
+  transform-origin: center center;
+}
+
+/*************************
+/** Animation keyframes **
+/*************************/
+
+@-webkit-keyframes eye-blink-1 {
+  from {
+    transform: scaleY(5%);
+  }
+  to {
+    transform: scaleY(100%);
+  }
+}
+
+@keyframes eye-blink-1 {
+  -webkit-animation: wifi-anim 1s linear infinite alternate;
+  animation: wifi-anim 1s linear infinite alternate;
+  transform-box: fill-box;
+  transform-origin: center center;
+}
+/* animation of the j1 axis of robot*/
+
 @-webkit-keyframes rotate-j1 {
   from {
     transform: rotateZ(0deg);
@@ -30,8 +66,6 @@
     transform: rotateZ(10deg);
   }
 }
-
-/* animation of the j1 axis of robot*/
 @keyframes rotate-j1 {
   from {
     transform: rotateZ(0deg);
@@ -43,10 +77,10 @@
 
 @-webkit-keyframes wifi-anim {
   from {
-    transform: scale(0.95);
+    transform: scale(0.95) translateY(0%);
   }
   to {
-    transform: scale(1.05);
+    transform: scale(1.05) translateY(2%);
   }
 }
 
