--- a/style.css
+++ b/style.css
@@ -15,13 +15,6 @@
   position: relative;
 }
 
-#axes-j1 {
-  -webkit-animation: rotate-j1 1s linear infinite alternate;
-  animation: rotate-j1 1s linear infinite alternate;
-  transform-origin: 12% 92%;
-  transform-box: fill-box;
-}
-
 /* WiFi icon animation */
 .wifi path {
   -webkit-animation: wifi-anim 1s linear infinite alternate;
@@ -30,61 +23,109 @@
   transform-origin: center center;
 }
 
-#left-figure.face.eye {
-  -webkit-animation: eye-blink-1 1s linear infinite alternate;
-  animation: eye-blink-1 1s linear infinite alternate;
+/* Eye blinking */
+#left-figure .face .eye {
+  -webkit-animation: eye-blink-1 1.7s linear infinite alternate;
+  animation: eye-blink-1 1.7s linear infinite alternate;
   transform-box: fill-box;
   transform-origin: center center;
+}
+
+#right-figure .face .eye {
+  -webkit-animation: eye-blink-1 2.3s linear infinite alternate;
+  animation: eye-blink-1 2.3s linear infinite alternate;
+  transform-box: fill-box;
+  transform-origin: center center;
+}
+
+#middle-figure .face .eye {
+  -webkit-animation: arm-swing 1.9s linear infinite alternate;
+  animation: arm-swing 1.9s linear infinite alternate;
+  transform-box: fill-box;
+  transform-origin: center center;
+}
+
+/* arm swinging */
+#right-figure .left-arm {
+  -webkit-animation: arm-swing 1s linear infinite alternate;
+  animation: arm-swing 1s linear infinite alternate;
+  transform-box: fill-box;
+  transform-origin: top left;
+}
+/*
+#left-figure .left-arm {
+  -webkit-animation: arm-swing 1s linear infinite alternate;
+  animation: arm-swing 1s linear infinite alternate;
+  transform-box: fill-box;
+  transform-origin: center right;
+}
+*/
+#left-figure .right-arm {
+  -webkit-animation: arm-swing 1.5s linear infinite alternate;
+  animation: arm-swing 1.5s linear infinite alternate;
+  transform-box: fill-box;
+  transform-origin: center right;
 }
 
 /*************************
 /** Animation keyframes **
 /*************************/
 
-@-webkit-keyframes eye-blink-1 {
-  from {
-    transform: scaleY(5%);
+/* eye blinking */
+
+@-webkit-keyframes arm-swing {
+  0% {
+    transform: rotate(0deg);
   }
-  to {
-    transform: scaleY(100%);
+  100% {
+    transform: rotate(5deg);
+  }
+}
+
+@keyframes arm-swing {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(5deg);
+  }
+}
+/* eye blinking */
+@-webkit-keyframes eye-blink-1 {
+  0% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.1;
   }
 }
 
 @keyframes eye-blink-1 {
-  -webkit-animation: wifi-anim 1s linear infinite alternate;
-  animation: wifi-anim 1s linear infinite alternate;
-  transform-box: fill-box;
-  transform-origin: center center;
-}
-/* animation of the j1 axis of robot*/
-
-@-webkit-keyframes rotate-j1 {
-  from {
-    transform: rotateZ(0deg);
+  0% {
+    opacity: 1;
   }
-  to {
-    transform: rotateZ(10deg);
+  90% {
+    opacity: 1;
   }
-}
-@keyframes rotate-j1 {
-  from {
-    transform: rotateZ(0deg);
-  }
-  to {
-    transform: rotateZ(10deg);
-  }
-}
-
-@-webkit-keyframes wifi-anim {
-  from {
-    transform: scale(0.95) translateY(0%);
-  }
-  to {
-    transform: scale(1.05) translateY(2%);
+  100% {
+    opacity: 0.1;
   }
 }
 
 /* animation of the wifi symbols */
+
+@-webkit-keyframes wifi-anim {
+  from {
+    transform: scale(0.95);
+  }
+  to {
+    transform: scale(1.05);
+  }
+}
+
 @keyframes wifi-anim {
   from {
     transform: scale(0.95);
